@@ -11,3 +11,6 @@ __license__ = "GNU GPLv2"
 import sys
 if (sys.version_info.major, sys.version_info.minor) < (3, 3):
     raise ImportError("Python 3.3 or above is required")
+
+
+__version__ = '2.1.0'
