@@ -28,6 +28,7 @@ from beancount.core import data
 from beancount.core import account
 from beancount.core import convert
 from beancount.parser import options
+from beancount.utils import version
 
 
 def group_accounts_by_metadata(accounts_map, meta_name):
@@ -306,7 +307,7 @@ def format_xhtml_table(items, klass='fields'):
 
 def main():
     logging.basicConfig(level=logging.INFO, format='%(levelname)-8s: %(message)s')
-    parser = argparse.ArgumentParser(description=__doc__.strip())
+    parser = version.ArgumentParser(description=__doc__.strip())
     parser.add_argument('filename', help='Beancount input filename')
     args = parser.parse_args()
 
